# iagent

./: .gitignore  .mise.toml  LICENSE  Makefile  README.md  pyproject.toml  settings.ini  setup.py  worklog.md
docs/: function_call.md
nbs/: 000_ai.messages.ipynb  000_core.function.ipynb  000_core.ipynb  000_task.ipynb  001_ai.responses.ipynb  001_ai.types.ipynb  001_core.types.ipynb  002_ai.service.ipynb  002_core.llm.ipynb  003_ai.imp.openai.ipynb  005_core.env.ipynb  010_mcp.ipynb  010_task.ipynb  index.ipynb  nbdev.yml
scratch/: 000_test_instructor_with_google.ipynb  000_test_langchain_with_google.ipynb  000_test_openai_with_google.ipynb  000_test_sk_with_google.ipynb  005_test_kernel_function.ipynb  00_test_instructor_with_google.ipynb  00_test_langchain_with_google.ipynb  00_test_sk_with_google.ipynb  010_test_mcp_with_google.ipynb  interface_design.md  test_mcp.py  test_mcp.py.old
src/: pyproject.toml
src/iagent/: _modidx.py  agent.py  core.py  env.py  mcp.py  memory.py  session.py  task.py  tool.py  tool2.py
src/iagent/ai/: messages.py  responses.py  service.py
src/iagent/ai/imp/: openai.py
src/iagent/core/: env.py  funtion.py  llm.py  messages.py
src/iagent/tool/: tool_spec.py
tests/iagent/: test_tool.py
tests/iagent/tool/: test_tool_spec.py  test_tool_spec.py.old
