[project]
name = "iagent"
version = "0.1.0"
description = "IAgent is multi-agent library, not a framework. It aims to provide primitive to enable you build agent application, than locking you in a specific framework"
authors = []
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic (>=2.0)",
    "griffe (>=1.7.2,<2.0.0)",
    "nbdev (>=2.4.2,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

