[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "iagent"
version = "0.1.0"
description = "IAgent is multi-agent library, not a framework. It aims to provide primitive to enable you build agent application, than locking you in a specific framework"
authors = []
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
  "pydantic (>=2.0)",
  "griffe (>=1.7.2,<2.0.0)",
  "langchain-google-vertexai (>=2.0.21,<3.0.0)",
  "langchain-mcp-adapters (>=0.0.9,<0.0.10)",
  "langchain (>=0.3.25,<0.4.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
nbdev = ">=2.4.2,<3.0.0"
black = "^24.4.2"
isort = "^5.13.2"
ruff = "^0.4.4"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
